rubocop: disable BlockLength rule on spec files
Specs are blocks composed of blocks, this metrics has a less meaning in
that context.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ Metrics/AbcSize:
 
 Metrics/BlockLength:
   Max: 90
+  Exclude:
+  - spec/**/*_spec.rb
 
 Metrics/LineLength:
   Max: 180 # we're not in the 80s anymore.
