--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,11 +10,10 @@ jobs:
   tests:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        ruby: [2.5.3]
-        include:
-        - os: windows-latest
-          ruby: 2.6.6 # Needs higher ruby version to be compatible with available MSYS2
+        os: [ubuntu-latest]
+        ruby:
+        - 2.7.8 # latest of 2.x serie (EOL) for old chef version compat
+        - 3.1.4 # latest compatible of 3.x serie - Chef < 18 is not compatible with ruby 3.2
     runs-on: ${{ matrix.os }}
     steps:
     - name: Enforce linefeeds
